# video-eeg

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Main.qml  main.cpp  notes
.claude/: settings.local.json
.github/workflows/: cmake-single-platform.yml
include/: amplifiermanager.h  amplifierparser.h  eegdatamodel.h  eegviewmodel.h  lslstreamreader.h  videoeegapp.h
qml/: AmplifierSetupWindow.qml  EegChannelGraph.qml  EegGraph.qml  EegGraphsWindow.qml  EegWindow.qml  Main.qml  MainWindow.qml  VideoDisplayWindow.qml  main.qml
qml/components/: EegChannel.qml
qml/components/eeg/: EegControlPanel.qml  EegLoadingOverlay.qml  EegPreviewOverlay.qml  EegScaleBar.qml  EegStatusBar.qml  EegToolbar.qml
qml/components/main/: ExaminationCard.qml  ExaminationsPanel.qml  PatientListPanel.qml
qml/components/setup/: AmplifierSelectionPage.qml  CameraSelectionPage.qml  ChannelSelectionPage.qml  SummaryPage.qml
qml/components/sync/: SyncMonitorPanel.qml
src/: amplifiermanager.cpp  amplifierparser.cpp  eegdatamodel.cpp  eegviewmodel.cpp  globals.cpp  globals.h  lslstreamreader.cpp  main.cpp  videoeegapp.cpp
src/managers/: amplifiermanager.cpp  amplifiermanager.h  cameramanager.cpp  cameramanager.h  eegsyncmanager.cpp  eegsyncmanager.h  lslstreamreader.cpp  lslstreamreader.h  markermanager.cpp  markermanager.h  recordingmanager.cpp  recordingmanager.h
src/models/: amplifiermodel.h  eegdatamodel.cpp  eegdatamodel.h  recordingsummary.h  sessionconfig.h  videoframepacket.h
src/utils/: autoscalemanager.cpp  autoscalemanager.h  eegdisplayscaler.cpp  eegdisplayscaler.h
src/viewmodels/: AmplifierSetupBackend.cpp  AmplifierSetupBackend.h  EegBackend.cpp  EegBackend.h  EegPlotItem.cpp  EegPlotItem.h  VideoBackend.cpp  VideoBackend.h  amplifiersetupviewmodel.cpp  amplifiersetupviewmodel.h  eegcanva.cpp  eegcanva.h  eegplotitem.cpp  eegplotitem.h  eegunifiedcanvas.cpp  eegunifiedcanvas.h  eegviewmodel.cpp  eegviewmodel.h
src/workers/: recordingworker.cpp  recordingworker.h
